--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>这是一个为金海岸实验学校2017届2班建立的纪念网站</title>
     </head>
     <body>
-        <img src="./dhz.jpg"/><h1>大合照</h1>
+        <img width="50%" height="50%" src="./dhz.jpg"/><h1>大合照</h1>
 <del>看看你干的好事</del>
 <p>时间之外的往事</p>
         <ul>
