--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>这是一个为金海岸实验学校2017届2班建立的纪念网站</title>
+        <title>金海岸实验学校2017届2班纪念网站</title>
     </head>
     <body>
-        <img width="50%" height="50%" src="./dhz.jpg"/><h1>大合照</h1>
+<h1>这是一个为金海岸实验学校2017届2班建立的纪念网站</h1>
 <del>看看你干的好事</del>
 <p>时间之外的往事</p>
         <ul>
@@ -13,3 +13,4 @@
         <li>诗词比赛全校第一
         <li>4位班长(两个不干正事的，是谁我不说doge)
         </ul>
+        <img width="70%" height="70%" src="./dhz.jpg"/><h1>大合照</h1>
