--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
         <li>诗词比赛全校第一
         <li>4位班长(两个不干正事的，是谁我不说doge)
         </ul>
-        <img width="70%" height="70%" src="./dhz.jpg"/><h1>大合照</h1>
+        <h1>大合照</h1>
+        <img width="70%" height="70%" src="./dhz.jpg"/>
